--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,5 +1,5 @@
 .wrapper {
-    width: 500px;
+    width: 50%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(200px);
@@ -10,7 +10,7 @@
 }
 
 .wrapper h1 {
-    font-size: 36px;
+    font-size: 2em;
     text-align: center;
 
 }
@@ -30,7 +30,7 @@
     border-radius: 40px;
     font-size: 16px;
     color: #fff;
-    padding: 20px 45px 20px 20px;
+    padding: 20px 0px 20px 20px;
     margin: 20px 0;
 }
 
