--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+#root {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+/* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+} */
+
 body{
+    width: 100%;
     font-family: "Poppins", sans-serif;
     -webkit-font-smoothing: antialiased;
     -mos-osx-font-smoothing: grayscale;
@@ -20,12 +28,23 @@ body{
 }
 
 .vote_styl {
-    width: 800px; 
-    margin-left:auto; 
-    margin-right: auto;
+    /* width: 600px; */
+    display: flex;
+    align-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 20px 0;    
+    /* min-width: 90%; */
+    /* align-items: flex-start;
+    justify-content: center; */
+    /* gap: 1em; */
+    
+    /* margin-left:auto; 
+    margin-right: auto; */
 }
 
-.okno {
+.window_list {
     width: 49%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -34,7 +53,36 @@ body{
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
-    float: left;
+    /* float: left; */
+    flex-basis: 40%;
+     
+}
+
+.window_vote {
+    flex-basis: 50%;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    backdrop-filter: blur(200px);
+    box-shadow: 0 0 10px rgba(255, 255, 255, .2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+    /* float: left; */
+}
+
+.blogout {
+    width: 40%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 700;
+    margin: 20px 0px;
 }
 
 table {
@@ -63,46 +111,6 @@ table td {
 
 table tbody tr {
     border-bottom: 1px solid #006f98;
-}
-
-.okno2 {
-    width: 49%;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(200px);
-    box-shadow: 0 0 10px rgba(255, 255, 255, .2);
-    color: #fff;
-    border-radius: 10px;
-    padding: 30px 40px;
-    float: right;
-}
-
-.okno3 {
-    width: 100%;
-    background: transparent;
-    border: 2px solid rgba(255, 255, 255, .2);
-    backdrop-filter: blur(200px);
-    box-shadow: 0 0 10px rgba(255, 255, 255, .2);
-    color: #fff;
-    border-radius: 10px;
-    padding: 30px 40px;
-    margin-top: 20px;
-    float: left;
-}
-
-.blogout {
-    width: 100%;
-    height: 45px;
-    background: #fff;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 700;
-    margin: 20px 0px;
 }
 
 .styled-table {
