--- a/src/components/login copy.css
+++ b/src/components/login copy.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities; */
 
-/* .wrapper {
+.wrapper {
     width: 50%;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -63,4 +63,4 @@
     color: #333;
     font-weight: 700;
     margin: 20px 0px;
-} */
+}
